--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tab{
+    @apply px-3 py-2 rounded-md text-blue-600 font-bold uppercase text-xs;
+}
+
+.tab-active{
+    @apply bg-slate-600 text-white
+}
+
+.btn {
+    @apply px-10 py-2 text-xs uppercase font-bold rounded-md;
+}
+
+.btn-submit{
+    @apply bg-blue-600 hover:bg-blue-700 text-white;
+}
+
+.btn-neutral {
+    @apply bg-slate-400 hover:bg-slate-500 text-white
+}
+
+.btn-danger {
+    @apply bg-red-500 hover:bg-red-600 text-white
+}
